<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="screen_name">Screen Name</string>
    <string name="body">Body</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="tag_line">Tagline</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tweet">Tweet</string>
    <string name="count">140</string>

</resources>